* 2014-04-25 - tobias.friedrich@open-xchange.com

 - Fix for bug 25701: Consider "pref" in "TEL" properties of vCards 
 - Fix for bug 32193: Don't try to deliver null events 
 
* 2014-04-25 - thorben.betten@open-xchange.com

 - Fix for bug 32191: Added hardening in case a mail account update takes place that might have its URL set to null

* 2014-04-25 - marc.arens@open-xchange.com

 - Fix for bug 32127: Don't send keepalive pings/processing while reading data from upstream

* 2014-04-24 - martin.schneider@open-xchange.com

 - Fix for bug 32152: Sanitize imported Xing phone, fax and cell numbers  

* 2014-04-24 - tobias.friedrich@open-xchange.com

 - Fix for bug 31970: Always close LDAP naming enumerations  
 - Fix for bug 29613: Allow configuration of used zip compression level  

* 2014-04-24 - martin.herfurth@open-xchange.com

 - Fix for bug 31963: Conflict handling for full time appointments.

* 2014-04-24 - thorben.betten@open-xchange.com

 - Fix for bug 32157: Added null guard for possible null reference to a MailMessage
 - Fix for bug 32156: Deal with possible null value int metadata settings extension

* 2014-04-22 - thorben.betten@open-xchange.com

 - Fix for bug 32111: Added setParameter() method that is error aware & improved log output in case of an invalid Content-Type parameter
 - Fix for bug 31684: Prefer look-up by user identifier over look-up by object/folder identifier pair

* 2014-04-21 - thorben.betten@open-xchange.com

 - Fix for bug 32033: Escape user input that is supposed to be displayed as HTML
 - Fix for bug 32108: Ignore duplicate Ical attachment that is part of multipart/alternative

* 2014-04-17 - martin.schneider@open-xchange.com

 - Fix for bug 30914: Ignore dates for import that contain only zeros

* 2014-04-17 - tobias.friedrich@open-xchange.com

 - Fix for bug 32076: Process images of imported contacts in a serialized way  
 - Fix for bug 30835: Sort languages by name  

* 2014-04-15 - tobias.friedrich@open-xchange.com
