@@ -16,5 +16,6 @@ Import-Package: com.openexchange.ajax.container,
  com.openexchange.osgi,
  com.openexchange.server,
  com.openexchange.session,
+ com.openexchange.tools.servlet.http,
  com.openexchange.tools.session,
  org.osgi.framework;version="1.3.0"
