@@ -454,11 +454,11 @@ public class FileResponseRenderer implements ResponseRenderer {
                 final String eTag = result.getHeader("ETag");
                 if (null != eTag) {
                     final long expires = result.getExpires();
-                    Tools.setETag(eTag, expires > 0 ? new Date(System.currentTimeMillis() + expires) : null, resp);
+                    Tools.setETag(eTag, expires > 0 ? expires : -1L, resp);
                 } else {
                     final long expires = result.getExpires();
                     if (expires < 0) {
-                        Tools.setExpiresInOneYear(resp);
+                        Tools.setDefaultExpiry(resp);
                     } else if (expires > 0) {
                         Tools.setExpires(new Date(System.currentTimeMillis() + expires), resp);
                     }
